err/tftpy.err
Listing '.'...
Listing './bin'...
Compiling './bin/tftpy_client.py'...
***   File "./bin/tftpy_client.py", line 108
    except tftpy.TftpException, err:
                              ^
SyntaxError: invalid syntax

Compiling './bin/tftpy_server.py'...
***   File "./bin/tftpy_server.py", line 44
    except tftpy.TftpException, err:
                              ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tftpy'...
Compiling './lib/python3.5/site-packages/tftpy/TftpClient.py'...
***   File "./lib/python3.5/site-packages/tftpy/TftpClient.py", line 26
    raise TftpException, "Invalid blksize: %d" % size
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tftpy/TftpContexts.py'...
***   File "./lib/python3.5/site-packages/tftpy/TftpContexts.py", line 115
    raise TftpTimeout, "Timeout waiting for traffic"
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tftpy/TftpPacketTypes.py'...
***   File "./lib/python3.5/site-packages/tftpy/TftpPacketTypes.py", line 66
    raise TftpException, "Invalid options in buffer"
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tftpy/TftpServer.py'...
***   File "./lib/python3.5/site-packages/tftpy/TftpServer.py", line 41
    raise TftpException, "A dyn_file_func supplied, but it is not callable."
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tftpy/TftpShared.py'...
***   File "./lib/python3.5/site-packages/tftpy/TftpShared.py", line 29
    raise TftpException, msg
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tftpy/TftpStates.py'...
***   File "./lib/python3.5/site-packages/tftpy/TftpStates.py", line 31
    raise NotImplementedError, "Abstract method"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tftpy/__init__.py'...
***   File "./lib/python3.5/site-packages/tftpy/__init__.py", line 16
    raise ImportError, "Requires at least Python 2.3"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tftpy-0.6.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
